:tada: Adjust some basic things

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "raphaelvserafim/client-php-api-wa-me",
-  "description": "Classe PHP para comunicação com api-wa.me",
+  "name": "DevGabrielSouza/client-php-api-wa-me",
+  "description": "Classe PHP para comunicação com api-wa.me - Compatível com PHP 8.1",
   "type": "library",
-  "homepage": "https://github.com/raphaelvserafim/client-php-api-wa-me",
+  "homepage": "https://github.com/DevGabrielSouza/client-php-api-wa-me",
   "license": "MIT",
   "autoload": {
     "psr-4": {
@@ -10,13 +10,18 @@
     }
   },
   "require": {
-    "php": "^7.2",
+    "php": "^7.2|^8.1",
     "ext-curl": "*"
   },
   "authors": [
     {
-      "name": "Raphael Serafim",
-      "email": "raphaelvserafim@gmail.com"
+      "name": "Gabriel Souza",
+      "email": "DevGabrielSouza@gmail.com"
     }
-  ]
+  ],
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "require-dev": {
+    "phpunit/phpunit": "^9.5"
+  }
 }
